[project]
name = "resolveunderoveredit"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
  "datasets>=2.14.0",
  "einops==0.4.0",
  "fairscale==0.4.13",
  "gpustat==1.1",
  "higher==0.2.1",
  "hydra-core==1.1.1",
  "importlib-metadata==6.3.0",
  "iopath==0.1.10",
  "matplotlib==3.5.1",
  "nltk==3.6.5",
  "numpy==1.22.1",
  "omegaconf==2.1.1",
  "openai==0.27.9",
  "opencv-python==4.8.0.76",
  "pandas==1.4.0",
  "peft==0.7.1",
  "pyyaml==6.0",
  "scikit-learn==1.0.2",
  "scipy==1.7.3",
  "sentence-transformers==3.2.1",
  "sentencepiece>=0.2.1",
  "timm==0.9.7",
  "tokenizers>=0.19.1",
  "torch==2.0.1",
  "tqdm==4.62.3",
  "transformers==4.44.2",
  "zhipuai>=2.1.5.20250825",
]
